--- a/react/shop/src/App.css
+++ b/react/shop/src/App.css
@@ -4,7 +4,9 @@
   background-size: cover;
   background-position: center;
 }
-
+Link{
+  text-decoration: none;
+}
 .App {
   text-align: center;
 }
